pod-security-vpol/restricted/restrict-seccomp-strict/.kyverno-test-controllers/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-seccomp-strict-controllers
policies:
- ../restrict-seccomp-strict.yaml
resources:
- resources.yaml
results:
- isValidatingPolicy: true
  kind: Deployment
  policy: restrict-seccomp-strict
  resources:
  - unsafe-restrict-seccomp-strict-1
  result: fail
- isValidatingPolicy: true
  kind: DaemonSet
  policy: restrict-seccomp-strict
  resources:
  - unsafe-restrict-seccomp-strict-2
  result: fail
- isValidatingPolicy: true
  kind: StatefulSet
  policy: restrict-seccomp-strict
  resources:
  - unsafe-restrict-seccomp-strict-3
  result: fail
- isValidatingPolicy: true
  kind: ReplicaSet
  policy: restrict-seccomp-strict
  resources:
  - unsafe-restrict-seccomp-strict-4
  result: fail
- isValidatingPolicy: true
  kind: ReplicationController
  policy: restrict-seccomp-strict
  resources:
  - unsafe-restrict-seccomp-strict-5
  result: fail
- isValidatingPolicy: true
  kind: Job
  policy: restrict-seccomp-strict
  resources:
  - unsafe-restrict-seccomp-strict-6
  result: fail
- isValidatingPolicy: true
  kind: CronJob
  policy: restrict-seccomp-strict
  resources:
  - unsafe-restrict-seccomp-strict-7
  result: fail
